# my_bazel_project

./: BUILD.bazel  WORKSPACE  app.js  app.spec.js  es5.babelrc  index.html  package-lock.json  package.json
